# piqueserver

./: .appveyor.yml  .clang-format  .coveragerc  .dockerignore  .drone.yml  .editorconfig  .gitattributes  .gitignore  .hgignore  .robocovrc  .travis.yml  CREDITS.txt  Dockerfile  MANIFEST.in  Makefile  OLD_README.md  README.md  README.rst  README.txt  __init__.py  appveyor.yml  azure-pipelines.yml  build.bat  build.py  build.sh  build_all.bat  build_all.sh  build_all_mingw.bat  build_mingw.bat  conftest.py  dev-requirements.txt  dev.Dockerfile  disp.py  docker-compose.override.yml  docker-compose.yml  docker_requirements.txt  lizard_report.txt  pylintrc  pyproject.toml  relay.py  (+13 more)
assignment_4/: README.md
configs/: README.md  config.json
contrib/: mapmakingtools.py
doc/: Makefile  admins.rst  architecture.rst  command-line.rst  conf.py  config-directory-structure.rst  config-options.rst  configuration.rst  contributing-developer.rst  contributing-user.rst  contributing.rst  developers.rst  development.rst  docker.rst  included-gamemodes.rst  included-scripts.rst  index.rst  installation.rst  make.bat  network-ports.rst  other.rst  piqueserver.core_commands.rst  piqueserver.game_modes.rst  piqueserver.rst  piqueserver.scripts.rst  piqueserver.web.rst  porting.rst  pyspades-forks-nota-list.rst  pyspades.rst  release-guide.rst  script-options.rst  spelling_wordlist.txt  startup-and-initialization.rst  supported-python-environments.rst  systemd-install-setup.rst
docs/: Makefile  conf.py  index.rst  make.bat
editor/: run.py
enet/: README.md  __init__.py  __init__.py-tpl  enet.pyx  prebuild.py  prebuild.sh  pyspades-enet.patch  pyspades-pyenet.patch
examples/: custom_master.py  generate_vxl.py  read_vxl.py  sinc0.vxl  test_client.py  test_generator.py  test_master.py  test_server.py  test_serverbrowser.py
experimental/: include_gl.h  load.py  mapmaker.py  opengl.pxd  render.pyx  test_world.py  test_world_visual.py  world.py
feature_server/: __main__.py  banpublish.py  bans.txt  bansubscribe.py  cfg.py  color.py  commands.py  config.txt  config.txt.default  config_vanilla.txt  console.py  globalban.py  ip_list.txt  irc.py  map.py  mapmaker.py  mapmaker.pyx  networkdict.py  publishserver.py  run.py  schedule.py  scheduler.py  server.py  ssh.py  statistics.py  statusserver.py  update_geoip.py  vote.py
piccolo/: __main__.py  banpublish.py  bansubscribe.py  config.py  console.py  irc.py  map.py  networkdict.py  player.py  run.py  scheduler.py  server.py  ssh.py  statistics.py  statusserver.py  version.py
piqueserver/: __init__.py  __main__.py  auth.py  banmanager.py  banpublish.py  bansubscribe.py  bot.py  cfg.py  commands.py  config.py  console.py  extensions.py  irc.py  map.py  networkdict.py  player.py  release.py  run.py  scheduler.py  server.py  ssh.py  statistics.py  statusserver.py  update_geoip.py  version.py
py2exe/: build.bat  build.py  build_editor.bat  build_editor.py  post_build.py  post_build_editor.py
pyenet/: README.md  test_client.py  test_enet.py
pyspades/: __init__.py  astar.py  block.py  bytereader.py  bytes.pxd  bytes.pyx  bytes_c.cpp  classicgen_c.cpp  client.py  clientloaders.py  clientloaders.pyx  collision.py  color.py  common.pxd  common.py  common.pyx  common_c.h  compressedvxl.pyx  compression.pyx  constants.py  constants_c.h  contained.pyx  debug.py  entities.py  exceptions.py  gamemodes.py  idpool.py  ipaddr.py  language.py  load.pxd  load.pyx  load_c.c  load_c.cpp  loaders.pxd  loaders.py  loaders.pyx  mapgenerator.py  mapmaker.pyx  master.py  (+24 more)
(+506 files in other folders)
